# agsim

./: README.md
inferencerobotcontrolpkg/.catkin_tools/profiles/default/: devel_collisions.txt
inferencerobotcontrolpkg/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
inferencerobotcontrolpkg/devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
inferencerobotcontrolpkg/devel/.private/motoman/: .catkin  .rosinstall  local_setup.sh
inferencerobotcontrolpkg/devel/.private/motoman_driver/: .catkin  .rosinstall  setup.sh
inferencerobotcontrolpkg/devel/.private/motoman_gp12_support/: .catkin  .rosinstall
inferencerobotcontrolpkg/devel/.private/motoman_gp25_support/: .catkin  (+3 more)
inferencerobotcontrolpkg/src/robot_config/: .setup_assistant
inferencerobotcontrolpkg/src/robot_moveit/: .setup_assistant  CMakeLists.txt
inferencerobotcontrolpkg/src/robot_moveit/config/: joint_limits.yaml  kinematics.yaml  robot_controllers.yaml  ros_controllers.yaml  xy-stage_arm.srdf
inferencerobotcontrolpkg/src/robot_moveit/launch/: demo.launch  gazebo.launch  planning_context.launch  robot_planning_execution.launch  sensor_manager.launch.xml
inferencerobotcontrolpkg/src/robot_moveit2/: .setup_assistant
robotcontrolpkg/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
robotcontrolpkg/logs/robot_moveit/: build.cmake.000.log.stderr
robotcontrolpkg/src/robot_moveit2/: CMakeLists.txt
robotcontrolpkg/src/scripts/: CMakeLists.txt
(+807 files in other folders)
